<resources>
    <string name="app_name">Project5</string>
    <string name="donut_order">Donut Order</string>
    <string name="coffee_order">Coffee Order</string>
    <string name="order_details">Order Details</string>
    <string name="store_orders">Store Orders</string>
    <string name="caramel">Caramel</string>
    <string name="milk">Milk</string>
    <string name="syrup">Syrup</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="cream">Cream</string>
    <string name="short_size">Short</string>
    <string name="tall_size">Tall</string>
    <string name="grande_size">Grande</string>
    <string name="venti_size">Venti</string>
    <string name="coffee_order_size">Coffee Size:</string>
    <string name="coffee_order_add_ons">Coffee Add Ons:</string>
    <string name="final_coffee_order">Final Coffee Order</string>
    <string name="final_donut_order">Final Donut Order</string>
    <string name="sales_tax">Sales Tax:</string>
    <string name="order_total">Order Total</string>
</resources>