<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/donut_order_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/donut_order" />

        <Button
            android:id="@+id/coffee_order_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="orderCoffee"
            android:text="@string/coffee_order" />

        <Button
            android:id="@+id/order_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/order_details" />

        <Button
            android:id="@+id/store_orders"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/store_orders" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>